--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,9 @@ workflows:
       - test:
           requires:
             - build
+      - deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              only: main
