Added deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,11 @@ jobs:
     steps:
       - checkout
       - run: python tests.py
+  deploy:
+    docker:
+      - image: cimg/python:3.11
+    steps:
+      - run: echo "Deploying to production server"
 workflows:
   build_and_test_deploy:
     jobs:
