Tried with dev branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - run: echo "Deploying to production server"
 workflows:
-  build_and_test_deploy:
+  build_and_test_deploy0:
     jobs:
       - build
       - test:
